2010-12-06  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16646: help_aboutmoules hardcoded as start up module - returns error if uninstalled
	* Fixed bug #16644: Ext Direct error as popup appears after BE login
	* Update #16695: Update ExtJS to version 3.3.1

2010-12-06  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #16679: Cannot login to backend at the end of 1-2-3 wizard when using Oracle
	* Follow-up to #16444: 1-2-3 wizard dies when MySQL driver is not available

2010-12-05  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16574: PHP notices from XCLASS inclusions

2010-12-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16674: htmlARea RTE: Broken/missing labels in context menu
	* Fixed bug #16675: htmlArea RTE: Incorrect result when inserting horizontal rule in FF and WebKit

2010-12-03  Ingo Renner  <ingo@typo3.org>

	* Follow-up to #16396: cleaned up code, fixed naming convention violations

2010-12-03  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #16396: cleanup code, added phpDoc and XCLASS definition

2010-12-02  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16645: EM - Install extension with dependency

2010-12-02  Ernesto Baschny  <ernesto@typo3.org>

	* Release of TYPO3 4.5.0beta2

2010-12-01  Ernesto Baschny  <ernst@cron-it.de>

	* Added Feature #15604: Install-Tool usability: db compare shows no errors when db-updates fail
	* Fixed bug #16594: Slide doesn't work without collect (Thanks to Jo Hasenau)
	* Fixed bug #16601: tslib_menu and tslib_Xmenu use wrong cObj with stdWrap (since #16446) (Thanks to Thomas Maroschik)
	* Fixed bug #15794: File>List (and other new sysext) shown even though extension not installed
	* Fixed bug #16639: DBAL auto-loading rendered the Install Tool unuseable (was switching mode to "123")
	* Added Feature #16610: Provide a SwiftMailer transport that only saves send mails to files (mbox format)